--- a/ui/package.json
+++ b/ui/package.json
@@ -9,12 +9,8 @@
     "url": "github:influxdata/chronograf"
   },
   "scripts": {
-    "build": "yarn run clean && webpack --config ./webpack/prod.config.js",
-    "build:dev": "webpack --config ./webpack/dev.config.js",
-    "build:vendor": "webpack --config webpack/vendor.config.js",
-    "start": "yarn run clean && yarn run build:vendor && webpack --watch --config ./webpack/dev.config.js",
-    "start:fast": "webpack --watch --config ./webpack/dev.config.js",
-    "start:hmr": "webpack-dev-server --open --config ./webpack/dev.config.js",
+    "build": "yarn run parcel build -d build src/index.html",
+    "start": "node parcel.js",
     "lint": "esw src/",
     "test": "jest",
     "test:lint": "yarn run lint; yarn run test",
@@ -59,7 +55,9 @@
     "babel-eslint": "6.1.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-lodash": "^2.0.1",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-syntax-trailing-function-commas": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.1",
@@ -88,6 +86,7 @@
     "hanson": "^1.1.1",
     "html-webpack-include-assets-plugin": "^1.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
     "imports-loader": "^0.6.5",
     "jest": "^23.1.0",
     "jest-runner-eslint": "^0.6.0",
@@ -95,8 +94,9 @@
     "jsdom": "^9.0.0",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
+    "parcel-bundler": "^1.9.3",
     "postcss-browser-reporter": "^0.4.0",
     "postcss-calc": "^5.2.0",
     "postcss-loader": "^2.1.5",
