--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -15,6 +15,7 @@
     ],
     "target": "es6",
     "module": "es2015",
+    "moduleResolution": "node",
     "lib": ["es6", "es2017", "dom"],
     "skipLibCheck": true,
     "isolatedModules": false,
